# Deflection-Droids

./: .gitignore  Cargo.toml  README.md
config/: display.ron
resources/: bindings_config.ron  display_config.ron
resources/sprites/: spritesheet.afdesign  spritesheet.ron
src/: gameplay.rs  main.rs
src/components/: droid.rs  mod.rs  selected.rs  tile.rs  token.rs  wall.rs
src/states/: gameplay.rs  mod.rs
src/systems/: highlight_tile.rs  mod.rs  move_droid.rs  select_droid.rs
src/utils/: board.rs
texture/: spritesheet.afdesign  spritesheet.ron
