[package]
name = "deflection_driods"
version = "0.1.0"
authors = []
edition = "2018"

[dependencies]
rand = "*"
itertools = "*"
amethyst = { version = "~0.13" }

[features]
default = ["metal"]
empty = ["amethyst/empty"]
metal = ["amethyst/metal"]
vulkan = ["amethyst/vulkan"]
nightly = ["amethyst/nightly"]
